// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePickerInput Component DatePickerInput renders and changes without onChange prop 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container"
      >
        <input
          autocomplete="off"
          class="input-date-picker-input"
          placeholder="TESTPLACEHOLDER"
          tabindex="0"
          type="text"
          value=""
        />
      </div>
    </div>
    <div />
  </div>
</div>
`;

exports[`DatePickerInput Component DatePickerInput renders and changes without onChange prop 2`] = `
<div>
  <div
    class=""
  >
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container"
      >
        <input
          autocomplete="off"
          class="input-date-picker-input"
          placeholder="TESTPLACEHOLDER"
          tabindex="0"
          type="text"
          value=""
        />
      </div>
    </div>
    <div />
  </div>
</div>
`;

exports[`DatePickerInput Component DatePickerInput renders highlighted in disabled 1`] = `
<div>
  <div
    class="input-date-picker-wrapper-read-only"
  >
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container"
      >
        <input
          autocomplete="off"
          class="input-date-picker-input-read-only input-date-picker-input highlighted"
          disabled=""
          placeholder="-"
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div />
  </div>
</div>
`;

exports[`DatePickerInput Component DatePickerInput renders highlighted in readonly 1`] = `
<div>
  <div
    class="input-date-picker-wrapper-read-only"
  >
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container"
      >
        <input
          autocomplete="off"
          class="input-date-picker-input-read-only highlighted"
          placeholder="-"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div />
  </div>
</div>
`;

exports[`DatePickerInput Component DatePickerInput renders in error 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container"
      >
        <input
          autocomplete="off"
          class="input-date-picker-input input-error"
          placeholder="MMM DD, YYYY"
          tabindex="0"
          type="text"
          value=""
        />
      </div>
    </div>
    <div />
  </div>
</div>
`;

exports[`DatePickerInput Component DatePickerInput renders in error in readonly 1`] = `
<div>
  <div
    class="input-date-picker-wrapper-read-only"
  >
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container"
      >
        <input
          autocomplete="off"
          class="input-date-picker-input-read-only"
          placeholder="-"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div />
  </div>
</div>
`;

exports[`DatePickerInput Component DatePickerInput renders with placeholder 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container"
      >
        <input
          autocomplete="off"
          class="input-date-picker-input"
          placeholder="TESTPLACEHOLDER"
          tabindex="0"
          type="text"
          value=""
        />
      </div>
    </div>
    <div />
  </div>
</div>
`;

exports[`DatePickerInput Component DatePickerInput renders without Portal 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container"
      >
        <input
          autocomplete="off"
          class="input-date-picker-input"
          placeholder="MMM DD, YYYY"
          tabindex="0"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;
